--- a/language/ru-RU/ru-RU.mod_yoo_features.ini
+++ b/language/ru-RU/ru-RU.mod_yoo_features.ini
@@ -4,8 +4,12 @@
 MOD_YOO_FEATURES_XML_NAME = "Модуль YooYoo features v1.1"
 MOD_YOO_FEATURES_XML_DESCRIPTION="В данном модуле можно выводить изображения с эффектом 3D переворота на сайт"
 MOD_YOO_FEATURES_TITLE_LABEL="Заголовок, отцентрированный по середине"
-MOD_YOO_FEATURES_CARDS_DESC="Количество карточек"
+MOD_YOO_FEATURES_CARDS_DESC="Дополнительные настройки карточек"
 MOD_YOO_FEATURES_CARDS_LABEL="Количество карточек"
+MOD_YOO_FEATURES_FLIPTYPE_LABEL="Способ переворота"
+MOD_YOO_FEATURES_FLIPTYPE_DESC="Выберите ориентацию поворота карточек"
+MOD_YOO_FEATURES_HORIZINTAL_FLIP="Горизонтально"
+MOD_YOO_FEATURES_VERTICAL_FLIP="Вертикально"
 MOD_YOO_FEATURES_INTROTEXT_LABEL="Текст на внешней стороне"
 MOD_YOO_FEATURES_INTROPIC_LABEL="Картинка внешней стороны"
 MOD_YOO_FEATURES_DESCTEXT_LABEL="Текст на внутренней стороне"
