Added sizing of cards

--- a/language/ru-RU/ru-RU.mod_yoo_features.ini
+++ b/language/ru-RU/ru-RU.mod_yoo_features.ini
@@ -23,5 +23,9 @@ MOD_YOO_FEATURES_DESCTEXT_DESC="Введите текст описания"
 MOD_YOO_FEATURES_DESCPIC_DESC="Выберите картинку для описания, если она необходима"
 MOD_YOO_FEATURES_INCLUDE_CSS_DESC="Включить/Выключить внешнюю таблицу стилей модуля"
 MOD_YOO_FEATURES_BACKGROUND_COLOR_DESC="Выберите цвет фона для подложки"
+
+MOD_YOO_FEATURES_CARD_SIZE_W_LABEL="Ширина карточки"
+MOD_YOO_FEATURES_CARD_SIZE_W_DESK="Ширина карточки"
+MOD_YOO_FEATURES_CARD_SIZE_H_LABEL="Высота карточки"
+MOD_YOO_FEATURES_CARD_SIZE_H_DESK="Высота карточки"
 JFIELD_ALT_LAYOUT_DESC="Layout desc"
-			
